router/k8s/squid-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squid-exporter
  namespace: watcher
  labels:
    app: squid-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squid-exporter
  template:
    metadata:
      labels:
        app: squid-exporter
    spec:
      containers:
      - name: squid-exporter
        image: harbor.jbnu.ac.kr/jdevops/squid-exporter:REPLACE_WITH_COMMIT_SHA
        ports:
        - containerPort: 9308
---
apiVersion: v1
kind: Service
metadata:
  name: squid-exporter-svc
  namespace: watcher
  labels:
    app: squid-exporter
spec:
  selector:
    app: squid-exporter
  ports:
  - name: metrics
    port: 9308
    targetPort: 9308
  type: ClusterIP
